tests/rosetta/out/Kotlin/abbreviations-easy.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/abbreviations-easy.kt:18:25: error: type inference failed. Expected type mismatch: inferred type is List<String> but MutableList<String> was expected
                words = words + cur
                        ^
/tmp/abbreviations-easy.kt:28:17: error: type inference failed. Expected type mismatch: inferred type is List<String> but MutableList<String> was expected
        words = words + cur
                ^
/tmp/abbreviations-easy.kt:89:25: error: unresolved reference: upper
                val c = upper(cmd)
                        ^
/tmp/abbreviations-easy.kt:90:26: error: unresolved reference: upper
                val ww = upper(w)
                         ^
/tmp/abbreviations-easy.kt:100:23: error: type inference failed. Expected type mismatch: inferred type is List<String> but MutableList<String> was expected
            results = results + "*error*"
                      ^
/tmp/abbreviations-easy.kt:110:1: error: conflicting overloads: public fun main(): Unit defined in root package in file abbreviations-easy.kt, public fun main(): Unit defined in root package in file abbreviations-easy.kt
fun main(): Unit {
^
/tmp/abbreviations-easy.kt:126:16: error: type inference failed. Expected type mismatch: inferred type is List<Int> but MutableList<Int> was expected
        mins = mins + count
               ^
/tmp/abbreviations-easy.kt:135:53: error: unresolved reference: size
        out1 = out1 + padRight(words[k], results[k].size) + " "
                                                    ^
/tmp/abbreviations-easy.kt:142:1: error: conflicting overloads: public fun main(): Unit defined in root package in file abbreviations-easy.kt, public fun main(): Unit defined in root package in file abbreviations-easy.kt
fun main() {
^
/tmp/abbreviations-easy.kt:143:5: error: overload resolution ambiguity: 
public fun main(): Unit defined in root package in file abbreviations-easy.kt
public fun main(): Unit defined in root package in file abbreviations-easy.kt
    main()
    ^
